--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,6 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+hashbrown = "0.15"
 rusqlite = { version = "0.34", features = ["functions"] }
 smallvec = "1.15"
